--- a/www/templates/aboutus.html
+++ b/www/templates/aboutus.html
@@ -1,5 +1,5 @@
-<ion-view view-title="M.O.B Contact details" class='sweet'>
+<ion-view view-title="M.O.B Contact details" class='body'>
 	<ion-content>
-		<h2>M.O.B Contacts</h2>
+		<h2 class="text">M.O.B Contacts</h2>
 	</ion-content>
 </ion-view>
