--- a/www/templates/contactus.html
+++ b/www/templates/contactus.html
@@ -1,14 +1,14 @@
-<ion-view view-title="Contact Us" class="sweet">
+<ion-view view-title="Contact Us" align-title="center" class="body">
   <ion-content>
     <div class="list card">
 
-  <div class="item item-avatar">
+  <div class="item item-avatar body">
     <img src="img/mob.jpg">
-    <h2>M.O.B SDA</h2>
-    <p>Welcome Home</p>
+    <h2 class="text">M.O.B SDA</h2>
+    <p class="text">Welcome Home</p>
   </div>
 
-  <div class="item item-image">
+  <div class="item item-image body">
     <img src="img/mob.jpg">
   </div>
 
@@ -16,12 +16,12 @@
 
 </div>
 
-    <div class="list list-inset">
- 			<div class="item item-text-wrap">
- 				We would be happy to have you join us in worship or at one of the church events listed on our calendar.
- 			</div> 			
+    <div class="list list-inset body">
+ 			
+ 				<h4 class="text" align="center"> We would be happy to have you join us in worship or at one of the church events listed on our calendar. </h4>
+ 						
  		</div>
-      <ion-item menu-close ng-click="CallNumber()">Call Us</ion-item>
+      <ion-item menu-close ng-click="CallNumber()" class="body text">Call Us</ion-item>
     
   </ion-content>
 </ion-view>
