--- a/www/templates/elderonduty.html
+++ b/www/templates/elderonduty.html
@@ -1,9 +1,9 @@
-<ion-view view-title="Elders" class="sweet">
+<ion-view view-title="Elders" class="body">
 	<ion-content>
 		
- 		<div class="card sweet">
- 			<div class="item sweet item-text-wrap">
- 				<h2 ng-bind-html="eldercontents">{{eldercontents}}</h2>
+ 		<div class="card body">
+ 			<div class="list list-inset body">
+ 				<h3 ng-bind-html="eldercontents" class="text">{{eldercontents}}</h3>
  				
  			</div> 			
  		</div>
