--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,11 +1,11 @@
-<ion-view view-title="M.O.B Ministries" class="sweet">
+<ion-view view-title="M.O.B Ministries" class="body">
   <ion-content>
     <div class="list card">
 
-  <div class="item item-avatar">
+  <div class="item item-avatar body">
     <img src="img/mob.jpg">
-    <h2>Mount Of Blessings SDA</h2>
-    <p>Welcome Home</p>
+    <h2 class="text">Mount Of Blessings SDA</h2>
+    <p class="text">Welcome Home</p>
   </div>
 
   <div class="item item-image">
@@ -18,11 +18,11 @@
 
 </div>
 
-    <div class="list list-inset">
- 			<div class="item sweet item-text-wrap" align="center">
- 				<h2>The ministries of this church are the life blood of this church. You are welcome  to be involved where your spiritual needs can be fulfilled and where you can share what God has done in your life.</h2>
+    
+ 			<div class="list list-inset body" align="center">
+ 				<h4 class="text">The ministries of this church are the life blood of this church. You are welcome  to be involved where your spiritual needs can be fulfilled and where you can share what God has done in your life.</h4>
  			</div> 			
- 		</div>
+ 
 
     
   </ion-content>
