--- a/www/templates/ministries.html
+++ b/www/templates/ministries.html
@@ -1,21 +1,21 @@
-<ion-view view-title="M.O.B Ministries" class="sweet">
+<ion-view view-title="M.O.B Ministries" class="body">
   <ion-content>
     <div class="list card">
 
-  <div class="item item-avatar">
+  <div class="item item-avatar body">
     <img src="img/mob.jpg">
-    <h2>Youth Ministries</h2>
-    <p>Welcome Home</p>
+    <h2 class="text">Youth Ministries</h2>
+    <p class="text">Welcome Home</p>
   </div>
 
-  <div class="item item-image">
+  <div class="item item-image body">
     <img src="img/mob.jpg">
   </div>
 
-  <div class="item item-avatar">
+  <div class="item item-avatar body">
     <img src="img/mob2.jpg">
-    <h2>Youth Ministries</h2>
-    <p>Welcome Home</p>
+    <h2 class="text">Youth Ministries</h2>
+    <p class="text">Welcome Home</p>
   </div>
 
   <div class="item item-image">
@@ -26,10 +26,11 @@
 
 </div>
 
-    <div class="list list-inset">
- 			<div class="item item-text-wrap">
- 				The ministries of this church are the life blood of this church. You are welcome  to be involved where your spiritual needs can be fulfilled and where you can share what God has done in your life.
- 			</div> 			
+    <div class="list list-inset body" align="center">
+ 			<!-- <div class="item item-text-wrap text body"> -->
+ 				<h4 class="text">The ministries of this church are the life blood of this church. You are welcome  to be involved where your spiritual needs can be fulfilled and where you can share what God has done in your life.
+ 			<!-- </div> 			 -->
+      </h4>
  		</div>
 
     
