--- a/www/templates/videolib.html
+++ b/www/templates/videolib.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Video Lib">
+<!-- <ion-view view-title="Video Lib">
   <ion-content>
     <div class="list card" ng-repeat="video in videos">
     	<div class="item item-text-wrap">
@@ -14,4 +14,32 @@
     	
     </div>
   </ion-content>
+</ion-view> -->
+
+<ion-view view-title="Video Lib">
+<ion-content>
+    <ion-list>
+        <div class="card">
+            <ion-item>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/j2g3qs8SSIY" frameborder="0" width="560" height="315"></iframe>
+                </div>
+            </ion-item>
+        </div>
+        <div class="card">
+            <ion-item>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/Uk9zXHgOsHQ" frameborder="0" width="560" height="315"></iframe>
+                </div>
+            </ion-item>
+        </div>
+        <div class="card">
+            <ion-item>
+                <div class="video-container">
+                    <iframe src="http://www.youtube.com/embed/Y1pM8k1Piag" frameborder="0" width="560" height="315"></iframe>
+                </div>
+            </ion-item>
+        </div>
+    </ion-list>
+</ion-content>
 </ion-view>
