--- a/www/templates/gallery.html
+++ b/www/templates/gallery.html
@@ -1,36 +1,36 @@
-<ion-view view-title="Contact Us" class="sweet">
+<ion-view view-title="Contact Us" class="body">
   <ion-content>
     <div class="list card">
 
-  <div class="item item-avatar">
+  <div class="item item-avatar body">
     <img src="img/mob.jpg">
-    <h2>M.O.B SDA</h2>
-    <p>09/23/2016</p>
+    <h2 class="text">M.O.B SDA</h2>
+    <p class="text">09/23/2016</p>
+  </div>
+
+  <div class="item item-image body">
+    <img src="img/mob.jpg">
+  </div>
+  </div>
+
+  <div class="item item-avatar body">
+    <img src="img/mob1.jpg">
+    <h2 class="text">M.O.B SDA</h2>
+    <p class="text">09/30/2016</p>
   </div>
 
   <div class="item item-image">
-    <img src="img/mob.jpg">
-  </div>
-  </div>
-
-  <div class="item item-avatar">
-    <img src="img/mob1.jpg">
-    <h2>M.O.B SDA</h2>
-    <p>09/30/2016</p>
-  </div>
-
-  <div class="item item-image">
     <img src="img/mob1.jpg">
   </div>
   </div>
 
-  <div class="item item-avatar">
+  <div class="item item-avatar body">
     <img src="img/church.jpg">
-    <h2>M.O.B SDA</h2>
+    <h2 class="text">M.O.B SDA</h2>
     <p>09/30/2016</p>
   </div>
 
-  <div class="item item-image">
+  <div class="item item-image body">
     <img src="img/church.jpg">
   </div>
   </div>
