--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="true">
+<ion-side-menus class="body" enable-menu-with-back-views="true">
   <ion-side-menu-content>
     <ion-nav-bar class="body">
       <ion-nav-back-button>
@@ -12,9 +12,9 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
-    <ion-header-bar class="sweet">
-      <h1 class="title">My Church</h1>
+  <ion-side-menu class="login" side="left">
+    <ion-header-bar class="login">
+      <h1 class="text">My Church</h1>
     </ion-header-bar>
     <ion-content class="sweet">
       <!--<ion-list>
@@ -42,14 +42,14 @@
           </a>
         </ion-item>
       </ion-list> -->
-      <div class="list">
+      <div class="list body">
 
-  <a class="item item-icon-left" menu-close href="#/app/posts">
+  <a class="item item-icon-left body" menu-close href="#/app/posts">
     <i class="icon ion-email"></i>
     M.O.B Bulletin
   </a>
 
-  <a class="item item-icon-left item-icon-right" menu-close href="#/app/sabbathschool">
+  <a class="item item-icon-left body item-icon-right" menu-close href="#/app/sabbathschool">
     <i class="icon ion-home"></i>
     Sabbath School
     <span class="item-note">
@@ -58,13 +58,13 @@
   </a>
 
 
-  <a class="item item-icon-left" menu-close href="#/app/postelders">
+  <a class="item item-icon-left body" menu-close href="#/app/postelders">
     <i class="icon ion-help-circled"></i>
     Elders On Duty
     <!-- <span class="badge badge-assertive">0</span> -->
   </a>
 
-  <a class="item item-icon-left" menu-close href="#/app/videolib">
+  <a class="item item-icon-left body" menu-close href="#/app/videolib">
     <i class="icon ion-social-youtube"></i>
     M.O.B Youtube Channel
     <span class="item-note">
@@ -72,17 +72,17 @@
     </span>
   </a>
 
-  <a class="item item-icon-left" menu-close href="#/app/aboutus">
-    <i class="icon ion-help-circled"></i>
+  <a class="item item-icon-left text body" menu-close href="#/app/aboutus">
+    <i class="icon text ion-help-circled"></i>
     About Us
     <!-- <span class="badge badge-assertive">0</span> -->
   </a>
 
 </div>
 
-<h3 align="center">My Lib</h3>
-<div class="list">
-  <a class="item item-icon-left" menu-close href="#/app/gallery">
+<h3 align="center" class="body">My Lib</h3>
+<div class="list text body">
+  <a class="item item-icon-left body" menu-close href="#/app/gallery">
     <i class="icon ion-image"></i>
     Gallery
     <!-- <span class="badge badge-assertive">0</span> -->
