--- a/www/templates/posts.html
+++ b/www/templates/posts.html
@@ -1,4 +1,4 @@
-<ion-view title-align="center" class="header-strong">
+<ion-view view-title="Bulletin" class="header-strong">
   <ion-content>
     <ion-list>
       <ion-item class="divg" ng-repeat="post in posts" href="#/app/post/{{post.id}}">
