finetuning youtube videos

--- a/www/templates/post.html
+++ b/www/templates/post.html
@@ -1,9 +1,9 @@
 <ion-view view-title="{{title}}">
 	<ion-content>
 		
- 		<div class="card">
- 			<div class="item item-text-wrap">
- 				<p ng-bind-html="content">{{content}}</p>
+ 		<div class="card body">
+ 			<div class="list list-inset body">
+ 				<p class="text" ng-bind-html="content">{{content}}</p>
  				<!-- <p ng-bind-html="excerpt">{{excerpt}}</p> -->
  			</div> 			
  		</div>
