--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,7 +5,7 @@
   <div class="item item-avatar body">
     <img src="img/mob.jpg">
     <h2 class="text">Mount Of Blessings SDA</h2>
-    <p class="text">Welcome Home</p>
+    <h3 class="text">Welcome Home</h3>
   </div>
 
   <div class="item item-image">
