--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,11 +12,11 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu class="login" side="left">
+  <ion-side-menu class="body" side="left">
     <ion-header-bar class="login">
       <h1 class="text">My Church</h1>
     </ion-header-bar>
-    <ion-content class="sweet">
+    <ion-content class="body">
       <!--<ion-list>
         <ion-item menu-close href="#/app/posts">
           M.O.B Bulletin
