--- a/www/templates/sabbathschool.html
+++ b/www/templates/sabbathschool.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Sabbath School">
+<ion-view view-title="Sabbath School" class="body">
 	<ion-content>
-		<p>Happy Sabbath</p>
+		<p class="text">Happy Sabbath</p>
 	</ion-content>
 </ion-view>
