--- a/www/templates/videolib.html
+++ b/www/templates/videolib.html
@@ -16,24 +16,24 @@
   </ion-content>
 </ion-view> -->
 
-<ion-view view-title="Video Lib">
+<ion-view view-title="Video Lib" class="body">
 <ion-content>
     <ion-list>
-        <div class="card">
+        <div class="card body">
             <ion-item>
-                <div class="video-container">
+                <div class="video-container ">
                     <iframe src="https://www.youtube.com/embed/j2g3qs8SSIY" frameborder="0" width="560" height="315"></iframe>
                 </div>
             </ion-item>
         </div>
-        <div class="card">
+        <div class="card body">
             <ion-item>
                 <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/Uk9zXHgOsHQ" frameborder="0" width="560" height="315"></iframe>
                 </div>
             </ion-item>
         </div>
-        <div class="card">
+        <div class="card body">
             <ion-item>
                 <div class="video-container">
                     <iframe src="http://www.youtube.com/embed/Y1pM8k1Piag" frameborder="0" width="560" height="315"></iframe>
