--- a/www/templates/eldersonduty.html
+++ b/www/templates/eldersonduty.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Elders On Duty" class="header-strong">
+<ion-view view-title="Elders On Duty" class="body">
   <ion-content>
     
       <ion-item class="divg" ng-repeat="postelder in postelders" href="#/app/postelder/{{postelder.id}}">
