--- a/www/templates/posts.html
+++ b/www/templates/posts.html
@@ -1,10 +1,13 @@
 <ion-view view-title="Bulletin" class="body">
   <ion-content>
-    
+   
       <ion-item class="body" ng-repeat="post in posts" href="#/app/post/{{post.id}}">
-        <h3 class="text">{{post.title.rendered}}</h3>
-        <p class="text"><i class="ion ion-ios-calender-outline">{{post.date | limitTo: 10}}</i></p>
+       
+	        <h3 >{{post.title.rendered}}</h3>
+	        <p><i class="ion ion-ios-calender-outline">{{post.date | limitTo: 10}}</i></p>
+     
       </ion-item>
+ 
    
   </ion-content>
 </ion-view>
