--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,13 @@
 <ion-view view-title="M.O.B Ministries" class="body">
   <ion-content>
+    <div class="card body">
+      <ion-item>
+        <div class="video-container ">
+          <iframe src="https://www.youtube.com/embed/j2g3qs8SSIY" frameborder="0" width="560" height="315"></iframe>
+        </div>
+      </ion-item>
+    </div>
+
     <div class="list card">
 
   <div class="item item-avatar body">
