sorted sabbath content from wordpress

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -49,7 +49,7 @@
     M.O.B Bulletin
   </a>
 
-  <a class="item item-icon-left body item-icon-right" menu-close href="#/app/sabbathschool">
+  <a class="item item-icon-left body item-icon-right" menu-close href="#/app/sabbathschools">
     <i class="icon ion-home"></i>
     Sabbath School
     <span class="item-note">
