--- a/www/templates/sabbathschool.html
+++ b/www/templates/sabbathschool.html
@@ -1,5 +1,14 @@
-<ion-view view-title="Sabbath School" class="body">
+<ion-view view-title="Sabbath school" class="body">
 	<ion-content>
-		<p class="text">Happy Sabbath</p>
+		
+ 		<div class="card body">
+ 			<div class="list list-inset body">
+ 				<h3 ng-bind-html="sabbathcontents" class="text">{{sabbathcontents}}</h3>
+ 				
+ 			</div> 			
+ 		</div>
+
+ 			
+		
 	</ion-content>
 </ion-view>
