sorted android build, apparently it was serviceworker.js missing and manifest.json, it was hell of a night

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,12 +1,12 @@
 <ion-view view-title="M.O.B Ministries" class="body">
   <ion-content>
-    <div class="card body">
+    <!--<div class="card body">
       <ion-item>
         <div class="video-container ">
           <iframe src="https://www.youtube.com/embed/j2g3qs8SSIY" frameborder="0" width="560" height="315"></iframe>
         </div>
       </ion-item>
-    </div>
+    </div>-->
 
     <div class="list card">
 
